// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SendMsgForm > render > should render 1`] = `ShallowWrapper {}`;

exports[`SendMsgForm > updates > should allow switching from router 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "all_urns": false,
        "attachments": [],
        "quick_replies": [],
        "text": "What is your favorite color?",
        "type": "send_msg",
        "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`SendMsgForm > updates > should save changes 1`] = `
{
  "attachments": [],
  "message": {
    "validationFailures": [],
    "value": "What is your favorite color?",
  },
  "quickReplies": {
    "validationFailures": [],
    "value": [
      "red",
      "green",
      "blue",
    ],
  },
  "quickReplyEntry": {
    "value": "",
  },
  "sendAll": true,
  "template": {
    "value": null,
  },
  "templateVariables": [],
  "topic": {
    "value": undefined,
  },
  "valid": true,
}
`;

exports[`SendMsgForm > updates > should save changes 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "all_urns": true,
        "attachments": [],
        "quick_replies": [
          "red",
          "green",
          "blue",
        ],
        "text": "What is your favorite color?",
        "type": "send_msg",
        "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
